--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -9,6 +9,8 @@ on:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
+  #schedule:
+    #  - cron: '20/15 9-18 1,10,20 * *'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -27,7 +29,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: echo Hello, world! This is my first workflow
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
