--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -36,3 +36,16 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+  print_full_technical_info:
+    runs-on: ubuntu-latest
+    steps:
+      - name: print full_tech_info
+        run: sudo lshw
+
+  print_short_technical_info:
+      runs-on: ubuntu-latest
+      steps:    
+        - name: print short_tech_info
+          run: sudo lshw -short              
+    
+
