--- a/.github/workflows/variables.yml
+++ b/.github/workflows/variables.yml
@@ -32,3 +32,14 @@ jobs:
             cd ${{ env.project_name }}
             touch ${{ env.project_files_set_2 }}
             ls -la
+
+    create_var_env:
+        runs-on: ubuntu-latest
+        steps:
+          - name: create var
+            run:
+            echo "SERVER_IP='$(hostname -I | awk '{print $1}')'" >> $GITHub_ENV
+          - name: read var
+            run: |
+            echo "Calling var from env using env context: server ip is ${{ env.SERVER_IP }}"
+            echo "Calling var from env: server ip is $SERVER_IP"                
