--- a/.github/workflows/variables.yml
+++ b/.github/workflows/variables.yml
@@ -1,5 +1,7 @@
 name: Test env 
-on: workflow_dispatch # Позволяет запускать workflow вручную
+
+on: 
+    workflow_dispatch # Позволяет запускать workflow вручную
 env: # Переменные уровня workflow
     work_path: ./project
     project_name: ./pyoops.com
