--- a/.github/workflows/variables.yml
+++ b/.github/workflows/variables.yml
@@ -40,7 +40,7 @@ jobs:
         steps:
           - name: create var
             run:
-              echo "SERVER_IP='$(hostname -I | awk '{print $1}')'" >> $GITHUB_OUTPUT
+              echo "SERVER_IP='$(hostname -I | awk '{print $1}')'" >> $GITHUB_ENV
           - name: read var
             run: |
               echo "Calling var from env using env context: server ip is ${{ env.SERVER_IP }}"
